# Doodle-Jump-in-SDL2

./: CMakeLists.txt  MyFramework.cpp  MyFramework.h  game.cpp  posXY.h
inc/: Framework.h
src/: launch.cpp
